--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,4 @@ TestResults/
 # User-specific files
 .vsconfig
 PlayReviewApp.PlayReviewDb.PlayReviewWebUI/appsettings.json
+PlayReviewApp.PlayReviewDb.PlayReviewWebUI/appsettings.json
